--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "number_theory"
+name = "efron_numbertheory"
 version = "0.3.1"
 authors = ["efron_licht <efron.python@gmail.com>"]
-
+license="MIT"
+description="a library for basic number theory"
 [dependencies]
 maplit = "1.0.1"
